<resources>
    <string name="app_name">MiSense</string>
    <string name="welcome">Selamat datang di MiSense \n Pilih senyawa yang akan di deteksi</string>
    <string name="result">Hasil Deteksi</string>
    <!--    Instruction for measurement-->
    <string name="inst_dopamine">Petunjuk Pengukuran Dopamin</string>
    <string name="howto_dopamine1">Siapkan alat bantu deteksi beserta kertas µPAD \n\nKonfigurasi kamera smartphone dalam mode manual dengan fokus 0,3 shutter speed 1/60fs, ISO 200, dan White Balance 4400k, Rasio gambar 1:1</string>
    <string name="howto_dopamine2_1">Teteskan 2,5 µL katalis G-Pt pada zona deteksi melalui bagian bawah</string>
    <string name="howto_dopamine2_2">Balik µPAD dan masukkan ke dalam tray yang telah disediakan</string>
    <string name="howto_dopamine2_3">Teteskan 15 µL cairan sampel pada zona sampel melalui bagian atas µPAD dan tunggu 1 menit
        \nTeteskan 2,5 µL reagen FeCl<sub>3</sub> pada masing-masing zona deteksi dan tunggu 15 detik
        \nTeteskan 2,5 µL phenanthroline pada masing-masing zona deteksi dan tunggu 15 detik</string>
    <string name="howto_dopamine2_4">Masukkan tray berisi µPAD kedalam alat bantu deteksi dan nyalakan
        \nAmbil gambar dan pastikan berada tepat di tengah</string>
    <string name="inst_glucose">Petunjuk Pengukuran Glukosa</string>
    <string name="howto_glucose1">Siapkan kertas µPAD \n\nKonfigurasi kamera smartphone dalam mode manual dengan fokus 0,3 shutter speed 1/60fs, ISO 200, dan White Balance 4400k, Rasio gambar 1:1</string>
    <string name="howto_glucose2_1">Teteskan 2,5 µL katalis G-Pt pada zona deteksi melalui bagian bawah</string>
    <string name="howto_glucose2_2">Balik µPAD dan masukkan ke dalam tray yang telah disediakan</string>
    <string name="howto_glucose2_3">Teteskan 15 µL cairan sampel pada zona sampel melalui bagian atas µPAD dan tunggu 1 menit
        \nTeteskan 2,5 µL reagen glucose oxidase kit pada masing-masing zona deteksi dan tunggu 15 detik</string>
    <string name="howto_glucose2_4">Ambil gambar dan pastikan berada tepat di tengah</string>
    <string name="inst_nadh">Petunjuk Pengukuran NADH</string>
    <string name="indexhsv">H/S/V</string>
    <string name="indexconc">Concentration</string>
    <!--    Others-->
    <string name="preview">Preview</string>
    <string name="txt_hue">Hue</string>
    <string name="txt_sat">Sat</string>
    <!--    Here for button text-->
    <string name="btn_dopamine">Dopamin</string>
    <string name="btn_glucose">Glukosa</string>
    <string name="btn_nadh">NADH</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_prev">Kembali</string>
    <string name="btn_next">Lanjut</string>
    <string name="btn_retry">Ulangi</string>
    <string name="btn_select">Pilih</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_finish">Selesai</string>
    <string name="btn_calculate">Hitung</string>
    <string name="testval">255</string>

</resources>