<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionGlucose">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_toimportimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instructionglucose">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/howtoglu1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal"
                android:justificationMode="inter_word"
                android:text="@string/howto_glucose1"
                android:textSize="7pt" />

            <ImageView
                android:id="@+id/img_guide1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@+id/howtoglu1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/guideimg1" />

            <ImageView
                android:id="@+id/blockno1"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_alignTop="@+id/img_guide1"
                android:layout_marginTop="-10dp"
                app:srcCompat="@drawable/smallblock" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignEnd="@+id/blockno1"
                android:layout_alignBottom="@+id/blockno1"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/howtodop2_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_guide1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/howto_dopamine2_1"
                android:textSize="7pt" />

            <ImageView
                android:id="@+id/img_guide2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/howtodop2_1"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/guideimg2" />

            <ImageView
                android:id="@+id/blockno2"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_alignTop="@id/img_guide2"
                app:srcCompat="@drawable/smallblock" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignEnd="@+id/blockno2"
                android:layout_alignBottom="@+id/blockno2"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/howtodop2_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_guide2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/howto_dopamine2_2"
                android:textSize="7pt" />

            <ImageView
                android:id="@+id/img_guide3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/howtodop2_2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/guideimg3" />

            <ImageView
                android:id="@+id/blockno3"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_alignTop="@id/img_guide3"
                app:srcCompat="@drawable/smallblock" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignEnd="@+id/blockno3"
                android:layout_alignBottom="@+id/blockno3"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/howtodop2_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_guide3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/howto_glucose2_3"
                android:textSize="7pt" />

            <ImageView
                android:id="@+id/img_guide4"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/howtodop2_3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/guideimg5" />

            <ImageView
                android:id="@+id/blockno4"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_alignTop="@id/img_guide4"
                app:srcCompat="@drawable/smallblock" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignEnd="@+id/blockno4"
                android:layout_alignBottom="@+id/blockno4"
                android:gravity="center"
                android:text="4"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/howtodop2_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_guide4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/howto_glucose2_4"
                android:textSize="7pt" />

        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guideheader" />

    <TextView
        android:id="@+id/text_instructionglucose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4pt"
        android:text="@string/inst_glucose"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@id/imageView3"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btn_toimportimg"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/enableblue"
        android:text="@string/btn_next"
        android:textSize="8pt"
        android:padding="3pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_prev"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/enableblue"
        android:textSize="8pt"
        android:padding="3pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>